# ir_eval_numba

./: pyproject.toml
src/ir_eval_numba/: __init__.py  metrics.py
tests/: metrics_test.py
