[project]
name = "ir-eval-numba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Lurch", email = "plurch@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
