[project]
name = "ir-eval-numba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Lurch", email = "plurch@users.noreply.github.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numba>=0.60.0",
    "numpy>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
